# article-companion-secure-ai-employee-openshell

./: .gitignore  OPENSHELL_SETUP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/enforcement-layers/: hot-reload.sh  privacy-router.yaml  seccomp-extension.yaml
examples/gotchas/: deceptive-landlock.yaml  deceptive-paths.yaml
examples/minimal-sandbox/: policy.yaml  sandbox.yaml
examples/nemoclaw-diff/: nemoclaw-additions.yaml
examples/onboarding-executor/: manifest.yaml  onboarding-policy.yaml  onboarding_flow.py
examples/orchestrator-pattern/: sandboxed_run.py
examples/research-assistant/: entrypoint.sh  flow.py  research-policy.yaml  run.sh  sandbox.yaml
tests/: conftest.py  test_article_consistency.py  test_bash_scripts.py  test_python_samples.py  test_yaml_validity.py
