[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "article-companion-secure-ai-employee-openshell"
version = "0.1.0"
description = "Companion code for 'Inside Alex's Sandbox: An Implementer's Guide to NVIDIA OpenShell + NemoClaw + CrewAI'"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.14.4",
    "crewai-tools>=1.14.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "jsonschema>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
